@@ -25,6 +25,7 @@ Other features
  * Added 'scale' image filter (Oliver Wilkerson)
  * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
  * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
+ * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
 
 
 Bug fixes
